Fixed weird spacing for Media tab

--- a/public/style.css
+++ b/public/style.css
@@ -236,7 +236,7 @@ form {
 #media-grid img {
     width: 23vw;
     height: 18vw;
-    margin: 0 1vw;
+    margin: 0 0.7vw;
 }
 
 #container {
